elk/iptables-save-ok
[root@node135 ~]# iptables-save
# Generated by iptables-save v1.4.21 on Thu Oct 25 15:22:32 2018
*nat
:PREROUTING ACCEPT [3:280]
:INPUT ACCEPT [3:280]
:OUTPUT ACCEPT [4:336]
:POSTROUTING ACCEPT [4:336]
:DOCKER - [0:0]
:DOCKER-INGRESS - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER-INGRESS
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER-INGRESS
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o br-399d0037889a -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-3620093dbb03 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o docker_gwbridge -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-72a3b58cebc8 -j MASQUERADE
-A POSTROUTING -o docker_gwbridge -m addrtype --src-type LOCAL -j MASQUERADE
-A DOCKER -i br-399d0037889a -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i docker_gwbridge -j RETURN
-A DOCKER -i br-3620093dbb03 -j RETURN
-A DOCKER-INGRESS -p tcp -m tcp --dport 9200 -j DNAT --to-destination 172.19.0.2:9200
-A DOCKER-INGRESS -p tcp -m tcp --dport 8200 -j DNAT --to-destination 172.19.0.2:8200
-A DOCKER-INGRESS -p tcp -m tcp --dport 5601 -j DNAT --to-destination 172.19.0.2:5601
-A DOCKER-INGRESS -p tcp -m tcp --dport 5044 -j DNAT --to-destination 172.19.0.2:5044
-A DOCKER-INGRESS -p tcp -m tcp --dport 9000 -j DNAT --to-destination 172.19.0.2:9000
-A DOCKER-INGRESS -p tcp -m tcp --dport 10080 -j DNAT --to-destination 172.19.0.2:10080
-A DOCKER-INGRESS -j RETURN
COMMIT
# Completed on Thu Oct 25 15:22:32 2018
# Generated by iptables-save v1.4.21 on Thu Oct 25 15:22:32 2018
*mangle
:PREROUTING ACCEPT [290264637:188629951313]
:INPUT ACCEPT [290257470:188617511074]
:FORWARD ACCEPT [6884:12416869]
:OUTPUT ACCEPT [189551667:246933947286]
:POSTROUTING ACCEPT [189558577:246946368504]
COMMIT
# Completed on Thu Oct 25 15:22:32 2018
# Generated by iptables-save v1.4.21 on Thu Oct 25 15:22:32 2018
*filter
:INPUT ACCEPT [200:35052]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [208:37317]
:DOCKER - [0:0]
:DOCKER-INGRESS - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-INGRESS
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-399d0037889a -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-399d0037889a -j DOCKER
-A FORWARD -i br-399d0037889a ! -o br-399d0037889a -j ACCEPT
-A FORWARD -i br-399d0037889a -o br-399d0037889a -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-3620093dbb03 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-3620093dbb03 -j DOCKER
-A FORWARD -i br-3620093dbb03 ! -o br-3620093dbb03 -j ACCEPT
-A FORWARD -i br-3620093dbb03 -o br-3620093dbb03 -j ACCEPT
-A FORWARD -o docker_gwbridge -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker_gwbridge -j DOCKER
-A FORWARD -i docker_gwbridge ! -o docker_gwbridge -j ACCEPT
-A FORWARD -i docker_gwbridge -o docker_gwbridge -j DROP
-A DOCKER-INGRESS -p tcp -m tcp --dport 9200 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 9200 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m tcp --dport 8200 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 8200 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m tcp --dport 5601 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 5601 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m tcp --dport 5044 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 5044 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m tcp --dport 9000 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 9000 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m tcp --dport 10080 -j ACCEPT
-A DOCKER-INGRESS -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 10080 -j ACCEPT
-A DOCKER-INGRESS -j RETURN
-A DOCKER-ISOLATION-STAGE-1 -i br-399d0037889a ! -o br-399d0037889a -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker_gwbridge ! -o docker_gwbridge -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-3620093dbb03 ! -o br-3620093dbb03 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-399d0037889a -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker_gwbridge -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-3620093dbb03 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
